# configsweep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
src/configsweep/: __init__.py  affiliate.py  sweep.py  sweep_combination.py  sweep_dag.py  sweeper.py
tests/: test_affiliate.py  test_affiliated.py  test_sweeper.py
